--- a/Pytorch01_FirstTry.ipynb
+++ b/Pytorch01_FirstTry.ipynb
@@ -206,11 +206,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 以上部分\n",
+    "# 以上部分jieshi\n",
     "# 首先要把梯度清零，不然PyTorch每次计算梯度会累加，不清零的话第二次算的梯度等于第一次加第二次的       \n",
     "# optimizer.zero_grad()\n",
     "# 计算前向传播的输出\n",
