--- a/Pytorch04_Multilayer_NN.ipynb
+++ b/Pytorch04_Multilayer_NN.ipynb
@@ -416,6 +416,201 @@
     "model_ft = train_model(model_ft, criterion, optimizer_ft, exp_lr_scheduler,\n",
     "                       num_epochs=25)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_conv = torchvision.models.resnet18(pretrained=True)\n",
+    "for param in model_conv.parameters():\n",
+    "    param.requires_grad = False\n",
+    "\n",
+    "# Parameters of newly constructed modules have requires_grad=True by default\n",
+    "num_ftrs = model_conv.fc.in_features\n",
+    "model_conv.fc = nn.Linear(num_ftrs, 2)\n",
+    "\n",
+    "model_conv = model_conv.to(device)\n",
+    "\n",
+    "criterion = nn.CrossEntropyLoss()\n",
+    "\n",
+    "# Observe that only parameters of final layer are being optimized as\n",
+    "# opposed to before.\n",
+    "optimizer_conv = optim.SGD(model_conv.fc.parameters(), lr=0.001, momentum=0.9)\n",
+    "\n",
+    "# Decay LR by a factor of 0.1 every 7 epochs\n",
+    "exp_lr_scheduler = lr_scheduler.StepLR(optimizer_conv, step_size=7, gamma=0.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 0/24\n",
+      "----------\n",
+      "train Loss: 0.6394 Acc: 0.6557\n",
+      "\n",
+      "val Loss: 0.2129 Acc: 0.9412\n",
+      "\n",
+      "Epoch 1/24\n",
+      "----------\n",
+      "train Loss: 0.5026 Acc: 0.7828\n",
+      "\n",
+      "val Loss: 0.2199 Acc: 0.9150\n",
+      "\n",
+      "Epoch 2/24\n",
+      "----------\n",
+      "train Loss: 0.4687 Acc: 0.8115\n",
+      "\n",
+      "val Loss: 0.1766 Acc: 0.9346\n",
+      "\n",
+      "Epoch 3/24\n",
+      "----------\n",
+      "train Loss: 0.4442 Acc: 0.8197\n",
+      "\n",
+      "val Loss: 0.1632 Acc: 0.9542\n",
+      "\n",
+      "Epoch 4/24\n",
+      "----------\n",
+      "train Loss: 0.4419 Acc: 0.8361\n",
+      "\n",
+      "val Loss: 0.1818 Acc: 0.9477\n",
+      "\n",
+      "Epoch 5/24\n",
+      "----------\n",
+      "train Loss: 0.2715 Acc: 0.9098\n",
+      "\n",
+      "val Loss: 0.1592 Acc: 0.9477\n",
+      "\n",
+      "Epoch 6/24\n",
+      "----------\n",
+      "train Loss: 0.3089 Acc: 0.8770\n",
+      "\n",
+      "val Loss: 0.1709 Acc: 0.9542\n",
+      "\n",
+      "Epoch 7/24\n",
+      "----------\n",
+      "train Loss: 0.3492 Acc: 0.8443\n",
+      "\n",
+      "val Loss: 0.1845 Acc: 0.9477\n",
+      "\n",
+      "Epoch 8/24\n",
+      "----------\n",
+      "train Loss: 0.3757 Acc: 0.8115\n",
+      "\n",
+      "val Loss: 0.1847 Acc: 0.9477\n",
+      "\n",
+      "Epoch 9/24\n",
+      "----------\n",
+      "train Loss: 0.4067 Acc: 0.8033\n",
+      "\n",
+      "val Loss: 0.1912 Acc: 0.9477\n",
+      "\n",
+      "Epoch 10/24\n",
+      "----------\n",
+      "train Loss: 0.2964 Acc: 0.8934\n",
+      "\n",
+      "val Loss: 0.1751 Acc: 0.9412\n",
+      "\n",
+      "Epoch 11/24\n",
+      "----------\n",
+      "train Loss: 0.3036 Acc: 0.8525\n",
+      "\n",
+      "val Loss: 0.1669 Acc: 0.9477\n",
+      "\n",
+      "Epoch 12/24\n",
+      "----------\n",
+      "train Loss: 0.3555 Acc: 0.8402\n",
+      "\n",
+      "val Loss: 0.1607 Acc: 0.9542\n",
+      "\n",
+      "Epoch 13/24\n",
+      "----------\n",
+      "train Loss: 0.2719 Acc: 0.8811\n",
+      "\n",
+      "val Loss: 0.1749 Acc: 0.9477\n",
+      "\n",
+      "Epoch 14/24\n",
+      "----------\n",
+      "train Loss: 0.2600 Acc: 0.9098\n",
+      "\n",
+      "val Loss: 0.1794 Acc: 0.9477\n",
+      "\n",
+      "Epoch 15/24\n",
+      "----------\n",
+      "train Loss: 0.3285 Acc: 0.8770\n",
+      "\n",
+      "val Loss: 0.1717 Acc: 0.9477\n",
+      "\n",
+      "Epoch 16/24\n",
+      "----------\n",
+      "train Loss: 0.3679 Acc: 0.8402\n",
+      "\n",
+      "val Loss: 0.1685 Acc: 0.9477\n",
+      "\n",
+      "Epoch 17/24\n",
+      "----------\n",
+      "train Loss: 0.3139 Acc: 0.8648\n",
+      "\n",
+      "val Loss: 0.1722 Acc: 0.9542\n",
+      "\n",
+      "Epoch 18/24\n",
+      "----------\n",
+      "train Loss: 0.3518 Acc: 0.8320\n",
+      "\n",
+      "val Loss: 0.1704 Acc: 0.9477\n",
+      "\n",
+      "Epoch 19/24\n",
+      "----------\n",
+      "train Loss: 0.3221 Acc: 0.8648\n",
+      "\n",
+      "val Loss: 0.1602 Acc: 0.9477\n",
+      "\n",
+      "Epoch 20/24\n",
+      "----------\n",
+      "train Loss: 0.3849 Acc: 0.8238\n",
+      "\n",
+      "val Loss: 0.1830 Acc: 0.9477\n",
+      "\n",
+      "Epoch 21/24\n",
+      "----------\n",
+      "train Loss: 0.4209 Acc: 0.7951\n",
+      "\n",
+      "val Loss: 0.1673 Acc: 0.9542\n",
+      "\n",
+      "Epoch 22/24\n",
+      "----------\n",
+      "train Loss: 0.3330 Acc: 0.8566\n",
+      "\n",
+      "val Loss: 0.1640 Acc: 0.9542\n",
+      "\n",
+      "Epoch 23/24\n",
+      "----------\n",
+      "train Loss: 0.3772 Acc: 0.8402\n",
+      "\n",
+      "val Loss: 0.1596 Acc: 0.9542\n",
+      "\n",
+      "Epoch 24/24\n",
+      "----------\n",
+      "train Loss: 0.2501 Acc: 0.8975\n",
+      "\n",
+      "val Loss: 0.1703 Acc: 0.9477\n",
+      "\n",
+      "Training complete in 9m 46s\n",
+      "Best val Acc: 0.954248\n"
+     ]
+    }
+   ],
+   "source": [
+    "model_conv = train_model(model_conv, criterion, optimizer_conv,\n",
+    "                         exp_lr_scheduler, num_epochs=25)"
+   ]
   }
  ],
  "metadata": {
